# mongodb_curd_eg

./: Cargo.toml
.github/workflows/: rust.yml
src/: main.rs
